2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Update STK600 routing and socket card data from XML
	file.

2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c: Cleanup the open/close handling to avoid accessing
	unallocated memory (in the atexit handler) in case of bailing out.
	* main.c: (Ditto.)

2010-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Stylistic changes: move #defines out into
	jtagmkII_private.h, drop all #if 0 blocks, fold overly long lines,
	move the *_initpgm() functions to the end of the file; while being
	here, remove all trailing whitespace.
	* jtagmkII_private.h: move AVR32 #defines here.

2010-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* bootstrap: autoconf 2.62 works well.

2010-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Various fixes for Xmega devices.
	* avrdude.conf.in: Correctly declare EEPROM page sizes for
	all Xmega devices (0x20 instead of 0x100).
	* avr.c: If a memory region has a page size declared, try
	using the paged IO routines regardless of the target memory
	name.  Xmega EEPROM requires to be written in paged mode.
	Correctly use a long (rather than unsigned long) variable to
	evaluate the success status of the paged mode write attempt.
	* stk500v2.c: Don't apply TIF space offsets twice (bug #27995:
	AVRDUDE 5.8svn fails to program and read XMEGA); use
	stk500v2_loadaddr() prior to paged mode (EEPROM and flash) writes,
	otherwise programming of flash areas will fail; while being there,
	check the return value of stk500v2_loadaddr() everywhere; use the
	correct write/erase mode bits (same as AVR Studio does).

2010-01-12  Michal Ludvig  <mludvig@logix.net.nz>

	* buspirate.c: Initialise firmware version to v0.0
	prior to parsing the buspirate banner.

2010-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Clean-up the Xmega erase functions.
	* jtagmkII_private.h: Add CMND_XMEGA_ERASE as well as
	the various XMEGA_ERASE_* definitions (from updated
	appnote AVR067)