@@ -139,6 +139,7 @@ dragon_dw        { yylval=NULL; return K_DRAGON_DW; }
 dragon_hvsp      { yylval=NULL; return K_DRAGON_HVSP; }
 dragon_isp       { yylval=NULL; return K_DRAGON_ISP; }
 dragon_jtag      { yylval=NULL; return K_DRAGON_JTAG; }
+dragon_pdi       { yylval=NULL; return K_DRAGON_PDI; }
 dragon_pp        { yylval=NULL; return K_DRAGON_PP; }
 eecr             { yylval=NULL; return K_EECR; }
 eeprom           { yylval=NULL; return K_EEPROM; }
@@ -156,6 +157,7 @@ jtagmkii         { yylval=NULL; return K_JTAG_MKII; }
 jtagmkii_avr32   { yylval=NULL; return K_JTAG_MKII_AVR32; }
 jtagmkii_dw      { yylval=NULL; return K_JTAG_MKII_DW; }
 jtagmkii_isp     { yylval=NULL; return K_JTAG_MKII_ISP; }
+jtagmkii_pdi     { yylval=NULL; return K_JTAG_MKII_PDI; }
 max_write_delay  { yylval=NULL; return K_MAX_WRITE_DELAY; }
 memory           { yylval=NULL; return K_MEMORY; }
 min_write_delay  { yylval=NULL; return K_MIN_WRITE_DELAY; }
